# UI_plus_API

./: .gitignore  config.json  conftest.py  pyproject.toml  pytest.ini
logic/: base_case.py  fixtures.py
logic/common/: common.py
logic/ui/elements/base/: button_element.py  error_container_element.py  input_element.py  text_element.py
logic/ui/locators/: base_page_locators.py  cart_page_locators.py  checkout_complete_page_locators.py  checkout_overview_page_locators.py  checkout_page_locators.py  login_page_locators.py  main_page_locators.py
logic/ui/pages/: base_page.py  basket_page.py  cart_page.py  checkout_complete_page.py  checkout_overview_page.py  checkout_page.py  item_page.py  login_page.py  main_page.py
tests/common/utils/: actions.py  page_factory.py  reporter.py  waits.py
tests/ui/component/functionality/: test_login_page_functionality.py
tests/ui/component/structure/: test_login_page_structure.py
tests/ui/e2e/: test_buy_one_item.py
tests/ui/integration/: test_add_random_item_to_cart.py
