[tool.poetry]
name = "pet-project"
version = "0.1.0"
description = "python + pytest + selenium + allure web tests project template"
authors = ["Aliaksandr Valkadatau"]

[tool.poetry.dependencies]
python = "^3.10"
selenium = "^4.6.0"
#python-dotenv = "^0.15.0"
#pydantic = "^1.8.1"
pytest = "^7.2.0"
pytest-xdist = "^2.5.0"
pytest-rerunfailures = "^10.2"
allure-pytest = "^2.11.1"
webium = "1.2.1"
webdriver-manager = "^3.8.4"
mimesis = "^6.1.1"
#[tool.poetry.dev-dependencies]
#black = "^22.3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

#[tool.black]
#line-length = 79
#target-version = ['py37']
#skip-string-normalization = true